force-app/main/default/objects/Reunification__c/Reunification__c.object-meta.xml
<CustomObject>
    <label>Reunification</label>
    <nameField>
        <displayFormat>RID-{0000}</displayFormat>
        <label>Reunification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reunifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>