force-app/main/default/objects/Reunification__c/fields/BarriersToReunification__c.field-meta.xml
<CustomField>
    <fullName>BarriersToReunification__c</fullName>
    <label>Barriers to Reunification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Housing Instability</fullName>
            </value>
            <value>
                <fullName>Parental Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Financial Instability</fullName>
            </value>
            <value>
                <fullName>Lack of Parental Engagement</fullName>
            </value>
            <value>
                <fullName>Ongoing Legal Issues</fullName>
            </value>
            <value>
                <fullName>Unmet Mental Health Needs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>