force-app/main/default/objects/Reunification__c/fields/CaseClosureDate__c.field-meta.xml
<CustomField>
    <fullName>CaseClosureDate__c</fullName>
    <label>Case Closure Date</label>
    <type>Date</type>
</CustomField>