force-app/main/default/objects/Reunification__c/fields/Child_Database__c.field-meta.xml
<CustomField>
    <fullName>Child_Database__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Reunifications</relationshipLabel>
    <relationshipName>Reunifications</relationshipName>
    <type>Lookup</type>
</CustomField>