force-app/main/default/objects/Reunification__c/fields/CourtApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>CourtApprovalStatus__c</fullName>
    <label>Court Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>