force-app/main/default/objects/Reunification__c/fields/FinalReviewDate__c.field-meta.xml
<CustomField>
    <fullName>FinalReviewDate__c</fullName>
    <label>Final Review Date</label>
    <type>Date</type>
</CustomField>