force-app/main/default/objects/Reunification__c/fields/HomeAssessmentStatus__c.field-meta.xml
<CustomField>
    <fullName>HomeAssessmentStatus__c</fullName>
    <label>Home Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>