force-app/main/default/objects/Reunification__c/fields/NotesandObservations__c.field-meta.xml
<CustomField>
    <fullName>NotesandObservations__c</fullName>
    <label>Notes &amp; Observations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>