force-app/main/default/objects/Reunification__c/fields/ParentingClassesCompleted__c.field-meta.xml
<CustomField>
    <fullName>ParentingClassesCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parenting Classes Completed?</label>
    <type>Checkbox</type>
</CustomField>