force-app/main/default/objects/Reunification__c/fields/PlanStartDate__c.field-meta.xml
<CustomField>
    <fullName>PlanStartDate__c</fullName>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>