force-app/main/default/objects/Reunification__c/fields/PostReunificationSupport__c.field-meta.xml
<CustomField>
    <fullName>PostReunificationSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-Reunification Support Needed?</label>
    <type>Checkbox</type>
</CustomField>