force-app/main/default/objects/Reunification__c/fields/ReasonForReunification__c.field-meta.xml
<CustomField>
    <fullName>ReasonForReunification__c</fullName>
    <label>Reason for Reunification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improved Parental Situation</fullName>
            </value>
            <value>
                <fullName>Court-Ordered</fullName>
            </value>
            <value>
                <fullName>Family Counseling Completed</fullName>
            </value>
            <value>
                <fullName>Parent Demonstrated Readiness</fullName>
            </value>
            <value>
                <fullName>Placement Stability Concerns</fullName>
            </value>
            <value>
                <fullName>Child’s Best Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>