force-app/main/default/objects/Reunification__c/fields/Reunification_Type__c.field-meta.xml
<CustomField>
    <fullName>Reunification_Type__c</fullName>
    <label>Reunification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial Reunification</fullName>
            </value>
            <value>
                <fullName>Full Reunification</fullName>
            </value>
            <value>
                <fullName>Temporary Custody</fullName>
            </value>
            <value>
                <fullName>Permanent Custody</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>