force-app/main/default/objects/Reunification__c/fields/ReunificationOutcome__c.field-meta.xml
<CustomField>
    <fullName>ReunificationOutcome__c</fullName>
    <label>Reunification Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Partially Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Deferred for Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>