force-app/main/default/objects/Reunification__c/fields/ReunificationPlanCreated__c.field-meta.xml
<CustomField>
    <fullName>ReunificationPlanCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reunification Plan Created?</label>
    <type>Checkbox</type>
</CustomField>