force-app/main/default/objects/Reunification__c/fields/ReunificationProgress__c.field-meta.xml
<CustomField>
    <fullName>ReunificationProgress__c</fullName>
    <label>Reunification Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>