force-app/main/default/objects/Reunification__c/fields/ReunificationSuccessful__c.field-meta.xml
<CustomField>
    <fullName>ReunificationSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reunification Successful?</label>
    <type>Checkbox</type>
</CustomField>