force-app/main/default/objects/Reunification__c/fields/TargetReunificationDate__c.field-meta.xml
<CustomField>
    <fullName>TargetReunificationDate__c</fullName>
    <label>Target Reunification Date</label>
    <type>Date</type>
</CustomField>