force-app/main/default/objects/Reunification__c/fields/VisitationSchedule__c.field-meta.xml
<CustomField>
    <fullName>VisitationSchedule__c</fullName>
    <label>Visitation Schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>